--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <img 
                     data-testid="test-user-avatar" 
                     id="avatarImage"
-                    src="/images/profile.png" 
+                    src="/images/avatar.png" 
                     alt="Profile picture of Victor B."
                 >
                 <input 
@@ -332,7 +332,7 @@
                     class="upload-btn"
                     aria-label="Change profile picture"
                 >
-                    📸
+                    <img src="/images/camera.svg" alt="">
                 </button>
             </figure>
         </header>
@@ -342,7 +342,7 @@
                 <h2 data-testid="test-user-name">Victor B.</h2>
                 
                 <p data-testid="test-user-bio">
-                    Full-stack developer with a passion for crafting pixel-perfect user interfaces and scalable backend systems. 
+                    FrontEnd developer with a passion for crafting pixel-perfect user interfaces and scalable backend systems. 
                     I believe great design is invisible until you need it, and great code is invisible until it breaks.
                 </p>
 
