--- a/simpler-version/all.html
+++ b/simpler-version/all.html
@@ -6,108 +6,7 @@
   <meta name="description" content="A simple profile card component with avatar, name, bio, social links, hobbies, and dislikes. Built with HTML, CSS, and JavaScript." />
   <meta name="author" content="Victor E." />
   <title>Profile Card — HNG stage0.</title>
-  <style>
-    :root {
-      --bg: #f7f7fb;
-      --text: #111827;
-      --muted: #4b5563;
-      --card: #ffffff;
-      --line: #e5e7eb;
-      --brand: #2563eb;
-      --focus: #3b82f6;
-      --radius: 14px;
-    }
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      font: 16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial;
-      background: var(--bg);
-      color: var(--text);
-      display: grid;
-      place-items: center;
-      padding: 20px;
-    }
-    article.profile-card {
-      width: min(900px, 100%);
-      background: var(--card);
-      border: 1px solid var(--line);
-      border-radius: var(--radius);
-      box-shadow: 0 8px 24px rgba(17, 24, 39, 0.06);
-      overflow: hidden;
-    }
-    .card-header {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      padding: 16px 18px;
-      border-bottom: 1px solid var(--line);
-      background: #f9fafb;
-    }
-    .card-title { font-size: 1.05rem; font-weight: 700; margin: 0; }
-    .helper { margin-left: auto; font-size: .9rem; color: var(--muted); }
-    .time { font-variant-numeric: tabular-nums; font-weight: 700; color: var(--brand); }
-    .wrap { display: grid; gap: 18px; padding: 18px; }
-    @media (min-width: 760px) { .wrap { grid-template-columns: 280px 1fr; } }
-    figure { margin: 0; }
-    .avatar {
-      width: 220px;
-      max-width: 100%;
-      aspect-ratio: 1;
-      object-fit: cover;
-      border-radius: 999px;
-      display: block;
-      border: 1px solid var(--line);
-    }
-    .controls { margin-top: 12px; display: grid; gap: 10px; }
-    .label { font-weight: 600; font-size: .95rem; }
-    input[type="url"], input[type="file"], .btn { font: inherit; }
-    input[type="url"] {
-      width: 100%;
-      padding: 10px 12px;
-      border: 1px solid var(--line);
-      border-radius: 10px;
-      background: #fff;
-    }
-    input[type="file"] {
-      width: 100%;
-      padding: 8px;
-      border: 1px dashed var(--line);
-      border-radius: 10px;
-      background: #fff;
-    }
-    .btn {
-      cursor: pointer;
-      width: max-content;
-      padding: 10px 14px;
-      border-radius: 10px;
-      border: 1px solid var(--brand);
-      background: var(--brand);
-      color: #fff;
-      font-weight: 600;
-    }
-    .hint { font-size: .85rem; color: var(--muted); }
-    .name { font-size: clamp(1.3rem, 2.2vw, 1.6rem); font-weight: 800; margin: 0 0 4px; }
-    .bio { margin: 0; color: var(--muted); }
-    nav[aria-label="Social links"] { margin-top: 14px; }
-    nav ul { list-style: none; margin: 0; padding: 0; display: flex; flex-wrap: wrap; gap: 10px; }
-    nav a {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      text-decoration: none;
-      color: var(--brand);
-      border: 1px solid var(--line);
-      padding: 8px 12px;
-      border-radius: 999px;
-      background: #fff;
-    }
-    .sections { display: grid; gap: 16px; margin-top: 8px; }
-    section.list { border: 1px solid var(--line); border-radius: 12px; padding: 12px; background: #fff; }
-    section.list h3 { margin: .1rem 0 .3rem; font-size: .95rem; }
-    ul.items { margin: 0; padding-left: 20px; }
-    :focus-visible { outline: 3px solid var(--focus); outline-offset: 3px; border-radius: 8px; }
-  </style>
+  <link rel="stylesheet" href="/simpler-version/styles.css">
 </head>
 <body>
   <article class="profile-card" data-testid="test-profile-card" aria-labelledby="person-name" aria-describedby="person-bio">
@@ -119,7 +18,7 @@
     <div class="wrap">
       <div>
         <figure>
-          <img id="avatar" class="avatar" data-testid="test-user-avatar" src="https://avatars.githubusercontent.com/u/583231?v=4" alt="User avatar" />
+          <img id="avatar" class="avatar" data-testid="test-user-avatar" src="/images/avatar.webp" alt="User avatar" />
         </figure>
         <div class="controls" aria-label="Avatar controls">
           <div class="label">Avatar</div>
